--- a/views/patientBookings.ejs
+++ b/views/patientBookings.ejs
@@ -1,4 +1,3 @@
-<!-- views/patientBookings.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookings</title>
     <style>
-        /* Example CSS for status colors */
         .status-accepted {
             color: green;
         }
         .status-rejected {
             color: red;
         }
-        /* Add more styles as needed */
     </style>
 </head>
 <body>
@@ -29,7 +26,7 @@
                         <th>Time</th>
                         <th>Consultation Type</th>
                         <th>Status</th>
-                        <th>Meeting Link</th> <!-- New column for Meeting Link -->
+                        <th>Meeting Link</th> 
                     </tr>
                 </thead>
                 <tbody>
