--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,37 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Signup</title>
   <style>
-        .google-signin-btn {
-            display: inline-block;
-            background-color: #4285F4;
-            color: white;
-            text-decoration: none;
-            padding: 12px 24px;
-            border-radius: 20px;
-            transition: background-color 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-        .google-signin-btn:hover {
-            background-color: #3171e0;
-        }
-        .google-signin-btn::before {
-            content: "";
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            border-radius: 20px;
-            width: 30px;
-            height: 30px;
-            background: url('https://developers.google.com/identity/images/g-logo.png') no-repeat;
-            background-size: contain;
-        }
-        .google-signin-btn span {
-            margin-left: 40px;
-            vertical-align: middle;
-            font-size: 16px;
-        }
+    .google-signin-btn {
+      display: inline-block;
+      background-color: #4285F4;
+      color: white;
+      text-decoration: none;
+      padding: 12px 24px;
+      border-radius: 20px;
+      transition: background-color 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+    .google-signin-btn:hover {
+      background-color: #3171e0;
+    }
+    .google-signin-btn::before {
+      content: "";
+      position: absolute;
+      left: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      border-radius: 20px;
+      width: 30px;
+      height: 30px;
+      background: url('https://developers.google.com/identity/images/g-logo.png') no-repeat;
+      background-size: contain;
+    }
+    .google-signin-btn span {
+      margin-left: 40px;
+      vertical-align: middle;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
@@ -71,6 +71,11 @@
       </div>
       <button type="submit">Signup</button>
     </form>
+
+    <br>
+    <a href="/auth/google" class="google-signin-btn">
+      <span>Continue with Google</span>
+    </a>
   <% } else if (selectRoleForm) { %>
     <form action="/auth/select-role" method="POST">
       <input type="hidden" name="name" value="<%= selectRoleForm.name %>">
@@ -93,16 +98,11 @@
       </div>
       <button type="submit">Verify OTP</button>
     </form>
+    <br>
+    <a href="/auth/exit" class="exit-btn">Exit</a>
   <% } %>
 
-  <br>
-
-  <a href="/auth/google" class="google-signin-btn">
-    <span>Continue with Google</span>
-  </a>
-
   <br><br>
-
   <a href="/auth/login">Login</a>
 </body>
 </html>
