--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -160,6 +160,7 @@
             <button type="button" onclick="handleRestrictedAccess()">Upload Blog Post</button>
         <% } %>
     </form>
+    <a href="/doctor-home">Home</a>
     
     <a href="/doctor/edit">Edit Profile</a>
     <% if ((doctor.subscriptionType === 'Standard' || doctor.subscriptionType === 'Premium' || doctor.subscriptionType === 'Enterprise') && doctor.subscriptionVerification === 'Verified') { %>
