--- a/views/DoctorBlogs.ejs
+++ b/views/DoctorBlogs.ejs
@@ -21,7 +21,7 @@
 </head>
 <body>
     <h1>Blogs</h1>
-    <form action="/patient/blogs" method="GET">
+    <form action="/doctor/priority-blogs" method="GET">
         <label for="search">Search:</label>
         <input type="text" id="search" name="search" value="<%= searchQuery %>">
         <button type="submit">Search</button>
@@ -35,11 +35,10 @@
                 <div>
                     <h3><%= blog.title %></h3>
                     <p><%= blog.summary %></p>
-                    <a href="/patient/blogs/view/<%= blog._id %>">Read More</a>
+                    <a href="/doctor/blogs/view/<%= blog._id %>">Read More</a>
                 </div>
             </li>
         <% }) %>
     </ul>
     
-</body>
 </html>
