--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- Include Google reCAPTCHA script -->
     <script src="https://www.google.com/recaptcha/api.js?render=6LcxzvcpAAAAANyqhQDvt1dgS4XGQxOBFT0O9jV3"></script>
     <style>
         .google-signin-btn {
@@ -78,7 +77,10 @@
         </div>
 
         <div class="mt-3">
-            <a href="/auth/signup">Sign Up</a>
+            <a href="/auth/signup/patient">Patient Sign Up</a>
+        </div>
+        <div class="mt-3">
+            <a href="/auth/signup/doctor">Doctor Sign Up</a>
         </div>
 
         <script>
