--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,13 +52,11 @@
                 <% } %>
             <% } else { %>
                 <a href="/auth/login">Login</a>
-                <a href="/auth/signup">Signup</a>
+                <a href="/auth/signup/patient">Signup</a>
             <% } %>
         </div>
 
-        <div class="blogs-container">
-            <button onclick="window.location.href='/patient/blogs'">View Blogs</button>
-        </div>
+        <a href="/patient/blogs">View All Blogs</a>
 
         <div class="filter-container">
             <form action="/patient/doctors" method="get">
